--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: GenomePlotR
 Type: Package
 Title: Plotting data in genomic context
-Version: 0.1.3
-Date: 2014-12-12
+Version: 0.1.4
+Date: 2015-01-23
 Author: Johannes Rainer
-Maintainer: Johannes Rainer <johannes.rainer@i-med.ac.at>
+Maintainer: Johannes Rainer <johannes.rainer@eurac.edu>
 Depends: RColorBrewer (>= 1.0.0), methods (>= 1.0.0), GenomicRanges (>= 1.0.0), IRanges (>= 1.10.0), lattice (>= 0.10)
 Description: Function to plot transcripts, genes or other features together with data (e.g. microarray probe data or sequencing data) on genomic coordinates.
 License: LGPL
