+ Added boxplot, rleboxplot.stats and rleboxplot to create a boxplot for an Rle object.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,10 @@ export(transformTo,strand2Num)
 export(plotFeatures,plotAssignmentX,plotData)
 ## color utils...
 export(value2Color,colorLegend)
-##
-export( plotRle )
-exportMethods( plot )
+
+## Rle stuff (plotRle.R:)
+export( plotRle, rleboxplot, rleboxplot.stats )
+exportMethods( plot, boxplot )
 
 ### get all methods and functions from GenomicRanges and IRanges:
 import(GenomicRanges,IRanges)
